# django-onlinevars

./: MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
onlinevars/: admin.py  apps.py  models.py  urls.py  views.py
onlinevars/migrations/: 0001_initial.py  0002_auto_20200521_2056.py  0003_auto_20200607_1431.py
onlinevars/templates/onlinevars/: chat.html  chat_start.html
